--- a/KeepITCurrent/index.html
+++ b/KeepITCurrent/index.html
@@ -74,9 +74,7 @@
     </div> 
     <section class="trending" id="trending-section">
       <h2>Trending</h2>
-      <div class="trending-grid">
-        <!-- Trending articles will be added here -->
-      </div>
+      <div class="trending-grid"></div>
     </section>    
     <main></main>
     <script src="index.js"></script>
