--- a/KeepITCurrent/index.html
+++ b/KeepITCurrent/index.html
@@ -68,6 +68,10 @@
         </div>
       </div>
     </header> 
+    <div class="date-time">
+      <div id="time"></div>
+      <div id="date"></div>
+    </div>
     <section class="trending" id="trending-section">
       <h2>Trending</h2>
       <div class="trending-grid"></div>
