--- a/KeepITCurrent/index.html
+++ b/KeepITCurrent/index.html
@@ -75,7 +75,8 @@
     <section class="trending" id="trending-section">
       <h2>Trending</h2>
       <div class="trending-grid"></div>
-    </section>    
+    </section>
+    <hr class="separator-line">   
     <main></main>
     <script src="index.js"></script>
   </body>
