--- a/KeepITCurrent/index.html
+++ b/KeepITCurrent/index.html
@@ -78,6 +78,9 @@
     </section>
     <hr class="separator-line">   
     <main></main>
+    <div class="chat-button" id="chat-button">
+      <i class="fas fa-comment"></i> Chat
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
