--- a/KeepITCurrent/index.html
+++ b/KeepITCurrent/index.html
@@ -81,6 +81,19 @@
     <div class="chat-button" id="chat-button">
       <i class="fas fa-comment"></i> Chat
     </div>
+    <div class="chat-room" id="chat-room">
+      <div class="chat-header">
+        <h3>Chat Room</h3>
+        <button id="close-chat">Close</button>
+      </div>
+      <div class="chat-messages" id="chat-messages">
+        <!-- Chat messages will be displayed here -->
+      </div>
+      <div class="chat-input">
+        <input type="text" id="message-input" placeholder="Type your message..." />
+        <button id="send-message">Send</button>
+      </div>
+    </div>    
     <script src="index.js"></script>
   </body>
 </html>
