update-codes&README.md

--- a/KeepITCurrent/index.html
+++ b/KeepITCurrent/index.html
@@ -86,9 +86,7 @@
         <h3>Chat Room</h3>
         <button id="close-chat">Close</button>
       </div>
-      <div class="chat-messages" id="chat-messages">
-        <!-- Chat messages will be displayed here -->
-      </div>
+      <div class="chat-messages" id="chat-messages"></div>
       <div class="chat-input">
         <input type="text" id="message-input" placeholder="Type your message..." />
         <button id="send-message">Send</button>
